distance scale set up, planet relative size, sun center, zoom-out at 25%

--- a/style.css
+++ b/style.css
@@ -7,69 +7,115 @@
     animation: rotate 4s linear infinite;
     border-radius: 50%;
 } */
+h1 {
+    color: white;
+    font-size: 100px;
+    position: relative;
+    top: 0%;
+    left: 44%;
+}
 .sun{
-    width:570px; 
-    height:570px; 
-    margin-top:180px; 
+    /* width:570px; 
+    height:570px;   */
+    width: 580px;
+    height: 580px;
     border-radius: 50%;
     background-color: yellow;
-    ;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .mercury{
     width:2px; 
     height:2px; 
-    margin-top:180px; 
+    margin-top:0px; 
     border-radius: 50%;
     background-color: gray;
+    position: fixed;
+    top: 50%;
+    left: 65.4148%;
+ 
+    transform: translate(-50%, -50%)
+
 }
 .venus{
-    width:5px; 
-    height:5px; 
-    margin-top:180px; 
+    width:20px; 
+    height:20px; 
+    margin-top:0px; 
     border-radius: 50%;
     background-color: brown;
+    position: fixed;
+    top: 50%;
+    /* top: 65.8406%; */
+    left: 65.75%;
+    transform: translate(-50%, 0%)
 }
 .earth{
-    width:6px; 
-    height:6px; 
-    margin-top:180px; 
+    width:25px; 
+    height:25px; 
+    margin-top:0px; 
     border-radius: 50%;
     background-color: blue;
+    position: fixed;
+    top: 50%;
+    left: 66.1649%;
+    transform: translate(-40%, -40%)
 }
 .mars{
     width:3px; 
     height:3px; 
-    margin-top:180px; 
+    margin-top:0px; 
     border-radius: 50%;
     background-color: red;
+    position: fixed;
+    top: 50%;
+    left: 33.32%;
+    transform: translate(-40%, -40%)
 }
 .jupiter{
     width:58px; 
     height:58px; 
-    margin-top:180px; 
+    margin-top: 0px; 
     border-radius: 50%;
     background-color:burlywood;
+    position: fixed;
+    top: 50%;
+    left: 29%;
+    transform: translate(-40%, -40%)
 }
 .saturn{
     width:48px; 
     height:48px; 
-    margin-top:180px; 
+    margin-top: 0px; 
     border-radius: 50%;
     background-color: tan;
+    position: fixed;
+    top: 50%;
+    left: 23%;
+    transform: translate(-40%, -40%)
 }
 .uranus{
     width:21px; 
     height:21px; 
-    margin-top:180px; 
+    margin-top:0px; 
     border-radius: 50%;
     background-color:darkblue;
+    position: fixed;
+    top: 50%;
+    left: 17%;
+    transform: translate(-40%, -40%)
 }
 .neptune{
     width:20px; 
     height:20px; 
-    margin-top:180px; 
+    margin-top:0px; 
     border-radius: 50%;
     background-color:darkblue;
+    position: fixed;
+    top: 50%;
+    left: 0%;
+    transform: translate(-50%, -50%)
 }
 /* div:before { 
     content:''; 
@@ -87,9 +133,14 @@
 } */
 
 body { 
-    background:black; 
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    color: white
-} /* The best color ever */
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    display: table;
+    margin: 0px;
+    padding: 0px;
+} 
+.planets {
+    height: 100vh;
+    width: 100vh;
+}
