--- a/style.css
+++ b/style.css
@@ -1,146 +1,189 @@
-/* div { 
-    width:2px; 
-    height:2px; 
-    margin-top:180px; 
-    transform-origin: center; 
-    position:relative; 
-    animation: rotate 4s linear infinite;
-    border-radius: 50%;
-} */
+body {
+    background-color: black;
+}
 h1 {
     color: white;
-    font-size: 100px;
+    text-align: center;
+}
+#space{
     position: relative;
-    top: 0%;
-    left: 44%;
-}
-.sun{
-    /* width:570px; 
-    height:570px;   */
-    width: 580px;
-    height: 580px;
-    border-radius: 50%;
-    background-color: yellow;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.mercury{
-    width:2px; 
-    height:2px; 
-    margin-top:0px; 
-    border-radius: 50%;
-    background-color: gray;
-    position: fixed;
-    top: 50%;
-    left: 65.4148%;
- 
-    transform: translate(-50%, -50%)
-
-}
-.venus{
-    width:20px; 
-    height:20px; 
-    margin-top:0px; 
-    border-radius: 50%;
-    background-color: brown;
-    position: fixed;
-    top: 50%;
-    /* top: 65.8406%; */
-    left: 65.75%;
-    transform: translate(-50%, 0%)
-}
-.earth{
-    width:25px; 
-    height:25px; 
-    margin-top:0px; 
-    border-radius: 50%;
-    background-color: blue;
-    position: fixed;
-    top: 50%;
-    left: 66.1649%;
-    transform: translate(-40%, -40%)
-}
-.mars{
-    width:3px; 
-    height:3px; 
-    margin-top:0px; 
-    border-radius: 50%;
-    background-color: red;
-    position: fixed;
-    top: 50%;
-    left: 33.32%;
-    transform: translate(-40%, -40%)
-}
-.jupiter{
-    width:58px; 
-    height:58px; 
-    margin-top: 0px; 
-    border-radius: 50%;
-    background-color:burlywood;
-    position: fixed;
-    top: 50%;
-    left: 29%;
-    transform: translate(-40%, -40%)
-}
-.saturn{
-    width:48px; 
-    height:48px; 
-    margin-top: 0px; 
-    border-radius: 50%;
-    background-color: tan;
-    position: fixed;
-    top: 50%;
-    left: 23%;
-    transform: translate(-40%, -40%)
-}
-.uranus{
-    width:21px; 
-    height:21px; 
-    margin-top:0px; 
-    border-radius: 50%;
-    background-color:darkblue;
-    position: fixed;
-    top: 50%;
-    left: 17%;
-    transform: translate(-40%, -40%)
-}
-.neptune{
-    width:20px; 
-    height:20px; 
-    margin-top:0px; 
-    border-radius: 50%;
-    background-color:darkblue;
-    position: fixed;
-    top: 50%;
-    left: 0%;
-    transform: translate(-50%, -50%)
-}
-/* div:before { 
-    content:''; 
-    position:absolute; 
-    height:100%; 
-    width:100%; 
-    background:blue; 
-    animation:rotate 3s linear reverse infinite; 
-    border-radius: 50%;
-}
-@keyframes rotate 
-{ 100% 
-    { transform:rotate(-360deg); 
-    } 
-} */
-
-body { 
     height: 100%;
     width: 100%;
-    background-color: black;
-    display: table;
-    margin: 0px;
-    padding: 0px;
-} 
-.planets {
-    height: 100vh;
-    width: 100vh;
+    border: 5px solid red;
+    display: flex;
+    position: absolute;
+    align-items: center;
+    justify-content: center;
 }
+#sun{
+    height: 50px;
+    width: 50px;
+    background-color: yellow;
+    border-radius: 100%;
+    align-items: center;
+    justify-content: center;
+
+}
+#mercury {
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    background-color: rgba(124, 121, 121, 0);
+    border-radius: 100%;
+    border: 2px dashed red;
+    -webkit-animation: spin-right 5s linear infinite;
+    animation: spin-right 5s linear infinite;
+}
+#mer {
+    position: absolute;
+    height: 10px;
+    width: 10px;
+    background-color: grey;
+    border-radius: 100%;
+    left: 45%;
+    top: -6px;
+}
+#venus {
+    height: 150px;
+    width: 150px;
+    background-color: rgba(124, 121, 121, .0);
+    border-radius: 100%;
+    position: absolute;
+    border: 2px dashed red;
+    -webkit-animation: spin-right 10s linear infinite;
+    animation: spin-right 10s linear infinite;
+}
+#ven {
+    position: absolute;
+    height: 10px;
+    width: 10px;
+    background-color: grey;
+    border-radius: 100%;
+    left: 45%;
+    top: -6px;
+}
+#earth {
+    height: 200px;
+    width: 200px;
+    background-color: rgba(124, 121, 121, 0);
+    border-radius: 100%;
+    position: absolute;
+    border: 2px dashed red;
+    -webkit-animation: spin-right 15s linear infinite;
+    animation: spin-right 15s linear infinite;
+}
+#eart {
+    position: absolute;
+    height: 10px;
+    width: 10px;
+    background-color: grey;
+    border-radius: 100%;
+    left: 45%;
+    top: -6px;
+}
+#mars {
+    height: 250px;
+    width: 250px;
+    background-color: rgba(124, 121, 121, 0);
+    border-radius: 100%;
+    position: absolute;
+    border: 2px dashed red;
+    -webkit-animation: spin-right 20s linear infinite;
+    animation: spin-right 20s linear infinite;
+}
+#mar {
+    position: absolute;
+    height: 10px;
+    width: 10px;
+    background-color: grey;
+    border-radius: 100%;
+    left: 45%;
+    top: -6px;
+}
+#jupiter {
+    height: 300px;
+    width: 300px;
+    background-color: rgba(124, 121, 121, 0);
+    border-radius: 100%;
+    position: absolute;
+    border: 2px dashed red;
+    -webkit-animation: spin-right 25s linear infinite;
+    animation: spin-right 25s linear infinite;
+}
+#jup {
+    position: absolute;
+    height: 10px;
+    width: 10px;
+    background-color: grey;
+    border-radius: 100%;
+    left: 45%;
+    top: -6px;
+}
+#saturn {
+    height: 350px;
+    width: 350px;
+    background-color: rgba(124, 121, 121, 0);
+    border-radius: 100%;
+    position: absolute;
+    border: 2px dashed red;
+    -webkit-animation: spin-right 30s linear infinite;
+    animation: spin-right 30s linear infinite;
+}
+#sat {
+    position: absolute;
+    height: 10px;
+    width: 10px;
+    background-color: grey;
+    border-radius: 100%;
+    left: 45%;
+    top: -6px;
+}
+#uranus {
+    height: 400px;
+    width: 400px;
+    background-color: rgba(124, 121, 121, 0);
+    border-radius: 100%;
+    position: absolute;
+    border: 2px dashed red;
+    -webkit-animation: spin-right 35s linear infinite;
+    animation: spin-right 35s linear infinite;
+
+}
+#uran {
+    position: absolute;
+    height: 10px;
+    width: 10px;
+    background-color: grey;
+    border-radius: 100%;
+    left: 45%;
+    top: -6px;
+}
+#neptune {
+    height: 500px;
+    width: 500px;
+    background-color: rgba(124, 121, 121, 0);
+    border-radius: 100%;
+    position: absolute;
+    border: 2px dashed red;
+    -webkit-animation: spin-right 40s linear infinite;
+    animation: spin-right 40s linear infinite;
+}
+#nept {
+    position: absolute;
+    height: 10px;
+    width: 10px;
+    background-color: grey;
+    border-radius: 100%;
+    left: 45%;
+    top: -6px;
+}
+@-webkit-keyframes spin-right {
+    100% {
+      -webkit-transform: rotate(-360deg);
+      -moz-transform: rotate(-360deg);
+      -ms-transform: rotate(-360deg);
+      -o-transform: rotate(-360deg);
+      transform: rotate(-
+      360deg);
+    }
+  }
