--- a/style.css
+++ b/style.css
@@ -1,23 +1,39 @@
 body {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
+    max-width: 1200px;
+    max-height: 700px;
+    /* border: 3px solid white; */
 }
 h1 {
+    color: rgb(173, 167, 167);
+    text-align: left;
+    font-size: 75px;
+}
+.information {
+    width: 250px;
+    height: 500px;
     color: white;
-    text-align: center;
+    font-size: 40px;
+    background-color: rgba(96, 96, 96, 0.395);
+    position: absolute;
+    margin-top: -20%;
+    margin-left: -90%;
 }
 #space{
     position: relative;
     height: 100%;
     width: 100%;
-    border: 5px solid red;
+    /* border: 5px solid red; */
     display: flex;
     position: absolute;
     align-items: center;
     justify-content: center;
+    margin-left: 10%;
+
 }
 #sun{
-    height: 50px;
-    width: 50px;
+    height: 2px;
+    width: 2px;
     background-color: yellow;
     border-radius: 100%;
     align-items: center;
@@ -25,154 +41,155 @@ h1 {
 
 }
 #mercury {
-    height: 100px;
-    width: 100px;
+    height: 6px;
+    width: 6px;
     position: absolute;
     background-color: rgba(124, 121, 121, 0);
     border-radius: 100%;
-    border: 2px dashed red;
-    -webkit-animation: spin-right 5s linear infinite;
-    animation: spin-right 5s linear infinite;
+    border: 2px dashed rgba(96, 96, 96, 0.395);
+    -webkit-animation: spin-right 10s linear infinite;
+    animation: spin-right 10s linear infinite;
 }
 #mer {
     position: absolute;
-    height: 10px;
-    width: 10px;
+    height: 3px;
+    width: 3px;
     background-color: grey;
     border-radius: 100%;
     left: 45%;
     top: -6px;
+
 }
 #venus {
-    height: 150px;
-    width: 150px;
+    height: 14px;
+    width: 14px;
     background-color: rgba(124, 121, 121, .0);
     border-radius: 100%;
     position: absolute;
-    border: 2px dashed red;
-    -webkit-animation: spin-right 10s linear infinite;
-    animation: spin-right 10s linear infinite;
+    border: 2px dashed rgba(96, 96, 96, 0.395);
+    -webkit-animation: spin-right 13.543s linear infinite;
+    animation: spin-right 13.543s linear infinite;
 }
 #ven {
     position: absolute;
-    height: 10px;
-    width: 10px;
-    background-color: grey;
+    height: 5px;
+    width: 5px;
+    background-color: rgb(209, 212, 162);
     border-radius: 100%;
     left: 45%;
     top: -6px;
 }
 #earth {
-    height: 200px;
-    width: 200px;
+    height: 20px;
+    width: 20px;
     background-color: rgba(124, 121, 121, 0);
     border-radius: 100%;
     position: absolute;
-    border: 2px dashed red;
-    -webkit-animation: spin-right 15s linear infinite;
-    animation: spin-right 15s linear infinite;
+    border: 2px dashed rgba(96, 96, 96, 0.395);
+    -webkit-animation: spin-right 15.906s linear infinite;
+    animation: spin-right 15.906s linear infinite;
 }
 #eart {
     position: absolute;
-    height: 10px;
-    width: 10px;
-    background-color: grey;
+    height: 6px;
+    width: 6px;
+    background-color: rgb(0, 170, 248);
     border-radius: 100%;
     left: 45%;
     top: -6px;
 }
 #mars {
-    height: 250px;
-    width: 250px;
+    height: 102px;
+    width: 102px;
     background-color: rgba(124, 121, 121, 0);
     border-radius: 100%;
     position: absolute;
-    border: 2px dashed red;
-    -webkit-animation: spin-right 20s linear infinite;
-    animation: spin-right 20s linear infinite;
+    border: 2px dashed rgba(96, 96, 96, 0.395);
+    -webkit-animation: spin-right 19.668s linear infinite;
+    animation: spin-right 19.668s linear infinite;
 }
 #mar {
     position: absolute;
     height: 10px;
     width: 10px;
-    background-color: grey;
+    background-color: rgb(155, 6, 6);
     border-radius: 100%;
     left: 45%;
     top: -6px;
 }
 #jupiter {
-    height: 300px;
-    width: 300px;
+    height: 188px;
+    width: 188px;
     background-color: rgba(124, 121, 121, 0);
     border-radius: 100%;
     position: absolute;
-    border: 2px dashed red;
-    -webkit-animation: spin-right 25s linear infinite;
-    animation: spin-right 25s linear infinite;
+    border: 2px dashed rgba(96, 96, 96, 0.395);
+    -webkit-animation: spin-right 36.183s linear infinite;
+    animation: spin-right 36.183s linear infinite;
 }
 #jup {
     position: absolute;
     height: 10px;
     width: 10px;
-    background-color: grey;
+    background-color: rgb(245, 121, 38);
     border-radius: 100%;
     left: 45%;
     top: -6px;
 }
 #saturn {
-    height: 350px;
-    width: 350px;
+    height: 377px;
+    width: 377px;
     background-color: rgba(124, 121, 121, 0);
     border-radius: 100%;
     position: absolute;
-    border: 2px dashed red;
-    -webkit-animation: spin-right 30s linear infinite;
-    animation: spin-right 30s linear infinite;
+    border: 2px dashed rgba(96, 96, 96, 0.395);
+    -webkit-animation: spin-right 48.866s linear infinite;
+    animation: spin-right 48.866s linear infinite;
 }
 #sat {
     position: absolute;
     height: 10px;
     width: 10px;
-    background-color: grey;
+    background-color: rgb(239, 176, 142);
     border-radius: 100%;
     left: 45%;
     top: -6px;
 }
 #uranus {
-    height: 400px;
-    width: 400px;
-    background-color: rgba(124, 121, 121, 0);
+    height: 590px;
+    width: 590px;
+    background-color: rgba(72, 11, 240, 0);
     border-radius: 100%;
     position: absolute;
-    border: 2px dashed red;
-    -webkit-animation: spin-right 35s linear infinite;
-    animation: spin-right 35s linear infinite;
+    border: 2px dashed rgba(96, 96, 96, 0.395);
+    -webkit-animation: spin-right 69.706s linear infinite;
+    animation: spin-right 69.706s linear infinite;
 
 }
 #uran {
     position: absolute;
     height: 10px;
     width: 10px;
-    background-color: grey;
+    background-color: rgb(3, 38, 236);
     border-radius: 100%;
     left: 45%;
     top: -6px;
 }
 #neptune {
-    height: 500px;
-    width: 500px;
+    height: 775px;
+    width: 775px;
     background-color: rgba(124, 121, 121, 0);
     border-radius: 100%;
     position: absolute;
-    border: 2px dashed red;
-    -webkit-animation: spin-right 40s linear infinite;
-    animation: spin-right 40s linear infinite;
+    border: 2px dashed rgba(96, 96, 96, 0.395);
+    -webkit-animation: spin-right 87.778s linear infinite;
+    animation: spin-right 87.778s linear infinite;
 }
 #nept {
     position: absolute;
     height: 10px;
     width: 10px;
-    background-color: grey;
+    background-color: rgb(54, 0, 201);
     border-radius: 100%;
     left: 45%;
     top: -6px;
@@ -187,3 +204,5 @@ h1 {
       360deg);
     }
   }
+
+  /* max-width */
