--- a/style.css
+++ b/style.css
@@ -6,18 +6,26 @@ body {
 }
 h1 {
     color: rgb(173, 167, 167);
-    text-align: left;
+    text-align: center;
     font-size: 75px;
 }
-.information {
-    width: 250px;
-    height: 500px;
+nav {
     color: white;
-    font-size: 40px;
-    background-color: rgba(96, 96, 96, 0.395);
-    position: absolute;
-    margin-top: -20%;
-    margin-left: -90%;
+    list-style-type: none;
+    text-align: center;
+    margin: 30px 0px;
+    font-size: 25px;
+}
+ul {
+    display: inline;
+    padding: 0px 75px 0px 75px;
+    margin: 0px 0px 50px 0px;
+    text-decoration: underline;
+}
+h2 {
+    color: white;
+    font-size: 12px;
+    text-align: center;
 }
 #space{
     position: relative;
@@ -28,7 +36,7 @@ h1 {
     position: absolute;
     align-items: center;
     justify-content: center;
-    margin-left: 10%;
+    margin-left: 0%;
 
 }
 #sun{
