--- a/outer.css
+++ b/outer.css
@@ -24,6 +24,15 @@ ul {
     margin: 0px 0px 50px 0px;
     text-decoration: underline;
 }
+.information{
+    border: 2px solid red;
+    height: auto;
+    width: 500px;
+    position: absolute;
+    text-align: center;
+    margin-left: 80%;
+    margin-top: 42%;
+}
 
 .space {
     display: grid;
