--- a/inner_style.css
+++ b/inner_style.css
@@ -1,36 +1,54 @@
 h1 {
-    color: rgb(173, 167, 167);
+    color: rgb(241, 241, 241);
     text-align: center;
     font-size: 75px;
 }
 body {
-    color: black;
-    background-color: black;
+    color: rgb(190, 187, 187);
     height: 100%;
     width: 100%;
+    background-image: url("/images/galaxy.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    
     /* border: 1px solid red */
 }
-
 nav {
-    color: white;
+    color: rgb(229, 226, 226);
     list-style-type: none;
     text-align: center;
     margin: 30px 0px;
-    font-size: 20px;
+    font-size: 25px;
 }
 ul {
     display: inline;
+    color: rgb(229, 226, 226);
     padding: 0px 75px 0px 75px;
     margin: 0px 0px 50px 0px;
     text-decoration: underline;
 }
-
+.information{
+    background-color: rgba(52, 52, 52, 0);
+    font-size: 30px;
+    color: rgb(229, 226, 226);
+    height: auto;
+    width: 500px;
+    position: absolute;
+    text-align: center;
+    margin-left: 30%;
+    margin-top: 10%;
+}
+li.planet-info{
+    list-style-type: none;
+    padding: 25px;
+    font-size: 25px;
+}
 .space {
     display: grid;
     grid-template-columns: repeat(9, 100px [col-start]);
     grid-template-rows: repeat(2, 0px [row-start]);
     color: white;
-    margin-top: 50px;
+    margin-top: 11%;
 }
 #Mercury {
     grid-column: 1/ span 2;
