--- a/mainstyle/style.css
+++ b/mainstyle/style.css
@@ -1,42 +1,49 @@
 body {
-    background-color: rgb(0, 0, 0);
-    max-width: 1200px;
-    max-height: 700px;
-    /* border: 3px solid white; */
+    color: rgb(190, 187, 187);
+    height: 100%;
+    width: 100%;
+    background-image: url("/images/galaxy.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 h1 {
-    color: rgb(173, 167, 167);
-    text-align: center;
+    color: rgb(241, 241, 241);
+    text-align: left;
     font-size: 75px;
 }
 nav {
-    color: white;
+    color: rgb(229, 226, 226);
     list-style-type: none;
-    text-align: center;
-    margin: 30px 0px;
+    text-align: left;
+    margin: -30px 0px 0px -75px;
     font-size: 25px;
 }
 ul {
     display: inline;
+    color: rgb(229, 226, 226);
     padding: 0px 75px 0px 75px;
     margin: 0px 0px 50px 0px;
     text-decoration: underline;
 }
 h2 {
-    color: white;
-    font-size: 12px;
-    text-align: center;
+    color: rgb(229, 226, 226);
+    width: auto;
+    height: auto;
+    font-size: 15px;
+    text-align: left;
+    margin-top: 75px;
+    padding: 20px;
 }
 #space{
-    position: relative;
     height: 100%;
     width: 100%;
-    /* border: 5px solid red; */
     display: flex;
     position: absolute;
     align-items: center;
     justify-content: center;
-    margin-left: -10%;
+    bottom: 0%;
+    left: 20%;
 
 }
 #sun{
@@ -65,7 +72,7 @@ h2 {
     background-color: grey;
     border-radius: 100%;
     left: 45%;
-    top: -6px;
+    top: -7px;
 
 }
 #venus {
@@ -85,7 +92,7 @@ h2 {
     background-color: rgb(209, 212, 162);
     border-radius: 100%;
     left: 45%;
-    top: -6px;
+    top: -7px;
 }
 #earth {
     height: 20px;
@@ -104,7 +111,7 @@ h2 {
     background-color: rgb(0, 170, 248);
     border-radius: 100%;
     left: 45%;
-    top: -6px;
+    top: -7px;
 }
 #mars {
     height: 102px;
@@ -118,12 +125,12 @@ h2 {
 }
 #mar {
     position: absolute;
-    height: 10px;
-    width: 10px;
+    height: 15px;
+    width: 15px;
     background-color: rgb(155, 6, 6);
     border-radius: 100%;
     left: 45%;
-    top: -6px;
+    top: -7px;
 }
 #jupiter {
     height: 188px;
@@ -137,12 +144,12 @@ h2 {
 }
 #jup {
     position: absolute;
-    height: 10px;
-    width: 10px;
+    height: 15px;
+    width: 15px;
     background-color: rgb(245, 121, 38);
     border-radius: 100%;
     left: 45%;
-    top: -6px;
+    top: -7px;
 }
 #saturn {
     height: 377px;
@@ -156,12 +163,12 @@ h2 {
 }
 #sat {
     position: absolute;
-    height: 10px;
-    width: 10px;
+    height: 15px;
+    width: 15px;
     background-color: rgb(239, 176, 142);
     border-radius: 100%;
     left: 45%;
-    top: -6px;
+    top: -7px;
 }
 #uranus {
     height: 590px;
@@ -176,12 +183,12 @@ h2 {
 }
 #uran {
     position: absolute;
-    height: 10px;
-    width: 10px;
+    height: 15px;
+    width: 15px;
     background-color: rgb(3, 38, 236);
     border-radius: 100%;
     left: 45%;
-    top: -6px;
+    top: -7px;
 }
 #neptune {
     height: 775px;
@@ -195,12 +202,12 @@ h2 {
 }
 #nept {
     position: absolute;
-    height: 10px;
-    width: 10px;
+    height: 15px;
+    width: 15px;
     background-color: rgb(54, 0, 201);
     border-radius: 100%;
     left: 45%;
-    top: -6px;
+    top: -7px;
 }
 @-webkit-keyframes spin-right {
     100% {
@@ -212,5 +219,3 @@ h2 {
       360deg);
     }
   }
-
-  /* max-width */
