added animation to all the pages for the stars

--- a/mainstyle/inner_style.css
+++ b/mainstyle/inner_style.css
@@ -73,4 +73,20 @@ li.planet-info{
     align-self: center;
     margin: 125px 0px 0px 700px;
 }
-
+.stars {
+    height: 2px;
+    width: 1.5px;
+    position: absolute;
+    border-radius: 100%;
+    /* border: 2px solid rgb(34, 29, 29); */
+    background-color: rgba(138, 138, 138, 0.26);
+    opacity: .5;
+    animation-name: blink;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+}
+@-webkit-keyframes blink {
+    0% {background-color: rgba(138, 138, 138, 0.315);}
+    50% {background-color: rgba(255, 255, 255, 0.938);}
+    100% {background-color: rgba(255, 255, 255, 0.315);}
+}
