added the animation removal button to all pages

--- a/mainstyle/inner_style.css
+++ b/mainstyle/inner_style.css
@@ -73,6 +73,21 @@ li.planet-info{
     align-self: center;
     margin: 125px 0px 0px 700px;
 }
+.star {
+    height: 2px;
+    width: 2px;
+    position: absolute;
+    border-radius: 100%;
+    /* border: 2px solid rgb(34, 29, 29); */
+    background-color: rgba(138, 138, 138, 0.26);
+    opacity: .5;
+
+}
+button {
+    border-radius: 10%;
+    position: absolute;
+    bottom: 0px;
+}
 .stars {
     height: 2px;
     width: 1.5px;
