--- a/mainstyle/style.css
+++ b/mainstyle/style.css
@@ -1,14 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
 body {
     height: 100vh;
     width: auto;
     background-image: url("/images/galaxy.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
-
-    /* display:grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto auto;
-    justify-content: center; */
     display: flex;
     flex-direction: column;
 }
@@ -17,6 +13,7 @@ body {
     grid-template-rows: auto auto auto;
     align-items: center;
     justify-items: center;
+    font-family: 'Fjalla One', sans-serif;
 }
 .main-title {
     color: white;
@@ -34,14 +31,17 @@ a {
 .main-content {
     color: white;
     text-align: justify;
+    
 }
-/* .space {
+.space {
     height: 5em;
     width: 5em;
     display: flex;
     position: absolute;
     align-items: center;
     justify-content: center;
+    top: 50%;
+    left:50%;
     pointer-events: none;
 }
 
@@ -242,4 +242,10 @@ a {
     0% {background-color: rgba(138, 138, 138, 0.315);}
     50% {background-color: rgba(255, 255, 255, 0.938);}
     100% {background-color: rgba(255, 255, 255, 0.315);}
-} */
+}
+.animation-button {
+    width: 7em;
+    height: 3em;
+    position: fixed;
+    border-radius: 10%;
+}   
