--- a/mainstyle/style.css
+++ b/mainstyle/style.css
@@ -2,7 +2,7 @@
 body {
     height: 100vh;
     width: auto;
-    background-image: url("/images/galaxy.jpeg");
+    background-image: url("./images/galaxy.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
