--- a/mainstyle/outer.css
+++ b/mainstyle/outer.css
@@ -7,7 +7,7 @@ body {
     color: rgb(190, 187, 187);
     height: 100%;
     width: 100%;
-    background-image: url("/images/galaxy.jpeg");
+    background-image: url("../images/galaxy.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     
