--- a/mainstyle/test.css
+++ b/mainstyle/test.css
@@ -8,7 +8,7 @@
 }
 #earth {
   -webkit-transform-style: preserve-3d;
-  background: url('/images/flat_earth.jpeg') repeat-x;
+  background: url('../images/flat_earth.jpeg') repeat-x;
   background-size: auto 100%;
   -webkit-animation: move-map 30s infinite linear;
   -moz-animation: move-map 30s infinite linear;
@@ -19,7 +19,7 @@
   width: 280px;
 }
 #venus {
-  background: url('/images/flat_venus.jpg') repeat-x;
+  background: url('../images/flat_venus.jpg') repeat-x;
   background-size: auto 100%;
   -webkit-animation: move-map 30s infinite linear;
   -moz-animation: move-map 30s infinite linear;
@@ -30,7 +30,7 @@
   width: 260px;
 }
 #mercury {
-  background: url('/images/flat_mercury.jpeg') repeat-x;
+  background: url('../images/flat_mercury.jpeg') repeat-x;
   background-size: auto 100%;
   -webkit-animation: move-map 30s infinite linear;
   -moz-animation: move-map 30s infinite linear;
@@ -41,7 +41,7 @@
   width: 100px;
 }
 #mars {
-  background: url('/images/flat_mars.jpeg') repeat-x;
+  background: url('../images/flat_mars.jpeg') repeat-x;
   background-size: auto 100%;
   -webkit-animation: move-map 30s infinite linear;
   -moz-animation: move-map 30s infinite linear;
