--- a/mainstyle/inner_style.css
+++ b/mainstyle/inner_style.css
@@ -97,8 +97,7 @@ button {
 }
 
 #Mercury {
-  -webkit-transform-style: preserve-3d;
-  background: url('../../images/flat_mercury.jpeg') repeat-x;
+  background: url('../images/flat_mercury.jpeg') repeat-x;
   background-size: auto 100%;
   height: 280px;
   width: 280px;
@@ -110,7 +109,7 @@ button {
   background: radial-gradient(circle at center, )
 }
 #Venus {
-  background: url('../../images/flat_venus.jpg') repeat-x;
+  background: url('../images/flat_venus.jpg') repeat-x;
   background-size: auto 100%;
   -webkit-animation: move-map 30s infinite linear;
   -moz-animation: move-map 30s infinite linear;
@@ -121,7 +120,7 @@ button {
   width: 260px;
 }
 #Earth {
-  background: url('../../images/flat_earth.jpeg') repeat-x;
+  background: url('../images/flat_earth.jpeg') repeat-x;
   background-size: auto 100%;
   -webkit-animation: move-map 30s infinite linear;
   -moz-animation: move-map 30s infinite linear;
@@ -132,7 +131,7 @@ button {
   width: 280px;
 }
 #Mars {
-  background: url('../../images/flat_mars.jpeg') repeat-x;
+  background: url('../images/flat_mars.jpeg') repeat-x;
   background-size: auto 100%;
   -webkit-animation: move-map 30s infinite linear;
   -moz-animation: move-map 30s infinite linear;
