--- a/mainstyle/inner_style.css
+++ b/mainstyle/inner_style.css
@@ -17,6 +17,7 @@ nav {
     text-align: center;
     margin: 30px 0px;
     font-size: 25px;
+    
 }
 ul {
     display: inline;
@@ -41,6 +42,7 @@ li.planet-info{
     grid-template-columns: auto auto auto auto;
     color: white;
     align-items: center;
+    margin-top: 3em;
 }
 
 .star {
@@ -101,48 +103,78 @@ button {
   background-size: auto 100%;
   height: 280px;
   width: 280px;
-  -webkit-animation: move-map 30s infinite linear;
-  -moz-animation: move-map 30s infinite linear;
-  -o-animation: move-map 30s infinite linear;
-  -ms-animation: move-map 30s infinite linear;
-  animation: move-map 30s infinite linear;
-  background: radial-gradient(circle at center, )
+
+
+  -webkit-animation: move-map2 140.76s infinite linear reverse rotate(.1deg);
+  -moz-animation: move-map2 140.76s infinite linear reverse rotate(.1deg);
+  -o-animation: move-map2 140.766s infinite linear reverse rotate(.1deg);
+  -ms-animation: move-map2 140.76s infinite linear reverse rotate(.1deg);
+  
+  transform: rotate(.1deg);
+  -webkit-transform: rotate(.1deg);
+
+
+  animation: move-map 140.76s infinite linear;
 }
 #Venus {
   background: url('../images/flat_venus.jpg') repeat-x;
   background-size: auto 100%;
-  -webkit-animation: move-map 30s infinite linear;
-  -moz-animation: move-map 30s infinite linear;
-  -o-animation: move-map 30s infinite linear;
-  -ms-animation: move-map 30s infinite linear;
-  animation: move-map 30s infinite linear;
   height: 260px;
   width: 260px;
+
+
+  -webkit-animation: move-map2 583.25s infinite linear reverse rotate(177deg);
+  -moz-animation: move-map2 583.25s infinite linear reverse rotate(177deg);
+  -o-animation: move-map2 583.25s infinite linear reverse rotate(177deg);
+  -ms-animation: move-map2 583.25s infinite linear reverse rotate(177deg);
+  
+  transform: rotate(177deg);
+  -webkit-transform: rotate(177deg);
+
+
+  animation: move-map 583.25s infinite linear;
 }
+
+
+
 #Earth {
   background: url('../images/flat_earth.jpeg') repeat-x;
   background-size: auto 100%;
-  -webkit-animation: move-map 30s infinite linear;
-  -moz-animation: move-map 30s infinite linear;
-  -o-animation: move-map 30s infinite linear;
-  -ms-animation: move-map 30s infinite linear;
-  animation: move-map 30s infinite linear;
   height: 280px;
   width: 280px;
+
+
+  -webkit-animation: move-map2 23.9345s infinite linear reverse rotate(23deg);
+  -moz-animation: move-map2 23.9345s infinite linear reverse rotate(23deg);
+  -o-animation: move-map2 23.9345s infinite linear reverse rotate(23deg);
+  -ms-animation: move-map2 23.9345s infinite linear reverse rotate(23deg);
+  
+  transform: rotate(23deg);
+  -webkit-transform: rotate(23deg);
+
+
+  animation: move-map 23.9345s infinite linear;
 }
 #Mars {
   background: url('../images/flat_mars.jpeg') repeat-x;
   background-size: auto 100%;
-  -webkit-animation: move-map 30s infinite linear;
-  -moz-animation: move-map 30s infinite linear;
-  -o-animation: move-map 30s infinite linear;
-  -ms-animation: move-map 30s infinite linear;
-  animation: move-map 30s infinite linear;
   height: 140px;
   width: 140px;
+
+
+  -webkit-animation: move-map2 24.6229s infinite linear reverse rotate(25deg);
+  -moz-animation: move-map2 24.6229s infinite linear reverse rotate(25deg);
+  -o-animation: move-map2 24.6229s infinite linear reverse rotate(25deg);
+  -ms-animation: move-map2 24.6229s infinite linear reverse rotate(25deg);
+  
+  transform: rotate(25deg);
+  -webkit-transform: rotate(25deg);
+
+
+  animation: move-map 24.6229s infinite linear;
 }
 
-/* @-moz-keyframes move-map {
+@-moz-keyframes move-map {
   0% {
     background-position: -849px 0; }
 
@@ -184,40 +216,3 @@ button {
     50% {background-color: rgba(255, 255, 255, 0.938);}
     100% {background-color: rgba(255, 255, 255, 0.315);}
 }
-
-
-@-moz-keyframes move-map {
-    0% {
-      background-position: -849px 0; }
-  
-    100% {
-      background-position: 0 0; } }
-  
-  @-webkit-keyframes move-map {
-    0% {
-      background-position: 0 0; }
-    100% {
-      background-position: -849px 0; }
-  }
-  
-  
-  @-o-keyframes move-map {
-    0% {
-      background-position: -849px 0; }
-  
-    100% {
-      background-position: 0 0; } }
-  
-  @-ms-keyframes move-map {
-    0% {
-      background-position: -849px 0; }
-  
-    100% {
-      background-position: 0 0; } }
-  
-  @keyframes move-map {
-    0% {
-      background-position: -849px 0; }
-  
-    100% {
-      background-position: 0 0; } } */
