--- a/mainstyle/outer.css
+++ b/mainstyle/outer.css
@@ -5,13 +5,11 @@ h1 {
 }
 body {
     color: rgb(190, 187, 187);
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: auto;
     background-image: url("../images/galaxy.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
-    
-    /* border: 1px solid red */
 }
 
 nav {
